# RaytracerC

./: .gitignore  CMakeLists.txt
lib/libattopng/: libattopng.c  libattopng.h
lib/lodepng/: lodepng.c  lodepng.h
src/: camera.c  camera.h  image.c  image.h  main.c  raycast.c  raycast.h  renderer.c  renderer.h
src/objects/: light.c  light.h  objects.c  objects.h  plane.c  scene.c  scene.h  sphere.c
src/threading/: pthread.c  thread.c  thread.h  win.c
src/util/: random.c  random.h  vector3.c  vector3.h
src/vect/: rgb.c  rgb.h
